<resources>
    <string name="app_name">MyVLA</string>
    <string name="this_database_is_empty">BANK OF WORDS\n IS EMPTY :(</string>
    <string name="databse_of_new_words">MY NEW WORDS</string>
    <string name="database_of_repeat_words">I REPEAT THESE WORDS</string>
    <string name="database_of_knows_words">I KNOW THESE WORDS</string>
    <string name="repeat">REPEAT</string>
    <string name="know">KNOW</string>
    <string name="_0_records_found">0 words</string>
    <string name="first_translation">Polish version</string>
    <string name="symbolNEXT"><![CDATA[>]]></string>
    <string name="_0_0">0 / 0</string>
    <string name="start">START</string>
    <string name="add_word">ADD WORD</string>
    <string name="database">MY WORDS</string>
    <string name="second_translation">English version</string>
    <string name="put_in_repeat_words">It will have to be repeated</string>
    <string name="put_in_known_words">I know the word</string>
    <string name="first_translationSmallLetters">polish version</string>
    <string name="second_translationSmallLetters">english version</string>
    <string name="newWord">NEW</string>
    <string name="no_records_yet">There are not words yet</string>
</resources>
