<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.ActivityAfterClickStartButton">

    <Button
        android:id="@+id/start1NewWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:width="250dp"
        android:height="100dp"
        android:text="@string/newWord" />

    <Button
        android:id="@+id/start1RepeatWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start1NewWords"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:width="250dp"
        android:height="100dp"
        android:text="@string/repeat" />

    <Button
        android:id="@+id/start1KnownWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start1RepeatWords"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:width="250dp"
        android:height="100dp"
        android:text="@string/know" />

    <ImageButton
        android:id="@+id/imageButtonBackToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</RelativeLayout>