<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background_translations"
    tools:context=".activities.ActivitySecondTranslationWord">

    <Button
        android:id="@+id/putInRepeatWordsButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/putInKnownWordsButton"
        android:layout_marginStart="20dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/put_in_repeat_words" />

    <Button
        android:id="@+id/putInKnownWordsButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="161dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/put_in_known_words" />

    <TextView
        android:id="@+id/counterOfLearningWordsTextViewSecondTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/putInKnownWordsButton"
        android:layout_alignTop="@+id/imageButtonBackToMainMenu"
        android:text="@string/_0_0"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imageButtonBackToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:background="@android:color/holo_red_dark"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageView
        android:id="@+id/imageViewFirstTranslation"
        android:layout_width="380dp"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        app:srcCompat="@android:color/white"
        android:alpha="0.4"/>

    <TextView
        android:id="@+id/textViewSecondTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="188dp"
        android:text="@string/second_translationSmallLetters"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>