<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_main_menu"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/startButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:width="250dp"
        android:height="100dp"
        android:background="#b0131b"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/addWordButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:width="250dp"
        android:height="100dp"
        android:background="#40c728"
        android:text="@string/add_word"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dbButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:width="250dp"
        android:height="100dp"
        android:background="#e5ca33"
        android:text="@string/database"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

</RelativeLayout>